# MyTGTodoist

./: .gitignore  AGENTS.md  README.md  RUNBOOK.md  docker-compose.api-verify.yml  docker-compose.bot-verify.yml  docker-compose.verify.yml  docker-compose.vps.override.yml  docker-compose.yml  pyproject.toml  run.sh
Docs/: 00_RUNTIME_CONTEXT.md  01_CORE_PHILOSOPHY.md  01_PRODUCT_VISION.md  02_PRODUCT_ARCHITECTURE.md  02_TECH_IMPLEMENTATION_UPDATED.md  03_MANAGEMENT_MODEL.md  03_REGLAMENT_UPDATED.md  04_OPERATIONS_UPDATED.md  04_USER_GUIDE.md  05_RELEASE_NOTES.md  06_TIME_PLANNER.md  Runtime Context.md
canon/: intents_v2.yml
docs/: 01_SYSTEM_OVERVIEW.md  02_RUNTIME_SPEC.md  03_ML_CONTRACT.md  HANDOFF.md  OPS_JOURNAL.md
docs-templates/: 00_DOCS_MAP.md  00_PHILOSOPHY.md  01_canon.MD  02_RUNTIME_SPEC.md  03_adapters.md  04_SYSTEM_OVERVIEW.md  05_ROADMAP_AND_PROGRESS.md  05_docs.md  06_DEVELOPMENT_BACKLOG.md  ML_STACK_CANON.md
google-sync/: Dockerfile
migrations/: 0009_items_tasks_subtasks.sql  001_inbox_queue.sql  005_items_tg_voice_meta.sql  010_tasks.sql  011_subtasks.sql  012_tasks_completed_at.sql  013_subtasks_completed_at.sql  014_tasks_source_msg_id.sql  015_subtasks_source_msg_id.sql  016_tasks_state.sql  017_tasks_planned_at.sql  018_directions_projects_cycles.sql  019_tasks_parent.sql  020_user_settings.sql  021_user_nudges.sql  022_user_settings_modules.sql  023_cycle_goals.sql  024_regulations.sql  025_regulation_runs.sql  026_time_blocks.sql  027_cycles.sql  028_goals.sql  029_goal_reschedule_events.sql  030_nudge_ack.sql  031_tasks_goal_id.sql  MIGRATIONS_INDEX.md
organizer-api/: Dockerfile  README.md  app.py
organizer-worker/: Dockerfile  README_P2_TASKS_RUNTIME.md  entrypoint.sh  worker.py
prompts/: command_examples.json
schemas/: command.schema.json  command_envelope.schema.json
scripts/: diag_ml_bundle.sh  diag_voice_bundle.ps1  diag_voice_bundle.sh  ops_snapshot.sh  ops_status.sh  prod_switch_to_runtime_stable.sh
src/: config.py  logging_setup.py  main.py
telegram-bot/: Dockerfile  bot.py
tests/: test_api_health.py  test_api_projects_inbox.py  test_api_state.py  test_bot_pending_state.py  (+21 more)
(+91 files in other folders)
